# p2p-analytics

./: .gitignore  404.html  README.md  index.html  objects.inv
api/io/: index.html
api/microstructure/: index.html
api/premium/: index.html
api/spreads/: index.html
api/summary/: index.html
examples/: index.html
get_started/: index.html
installation/: index.html
phase2_package/: mkdocs.yml  pyproject.toml
phase2_package/docs/: examples.md  get_started.md  index.md  installation.md
phase2_package/docs/api/: io.md  microstructure.md  premium.md  spreads.md  summary.md
phase2_package/src/p2p_analytics/: __init__.py  io.py  microstructure.py  premium.py  spreads.py  summary.py
phase2_package/tests/: conftest.py  test_io.py  test_spreads.py  test_summary.py
search/: search_index.json
